Opened 17 months ago
Closed 3 months ago
#8256 closed bug (fixed)
[Terminal] remember color schema settings [easy]
| Reported by: | Disreali | Owned by: | siarzhuk |
|---|---|---|---|
| Priority: | normal | Milestone: | R1 |
| Component: | Applications/Terminal | Version: | R1/Development |
| Keywords: | GSOC2012 | Cc: | |
| Blocked By: | Blocking: | ||
| Has a Patch: | yes | Platform: | All |
Description
Using hrev43534, but it has been around for quite awhile.
Steps to reproduce:
- Open Terminal -> Settings -> Settings.
- notice that the Color schema dropdown box is set to 'Custom', and the Color dropdown and ColorChooser(is that the proper name?) are 'live' and can be changed.
- Select a pre-defined Color schema from the dropdown box.
- notice that the Color dropdown and the ColorChooser are now grayed out and no longer 'live'.
- Click the 'OK' button to save settings and close the Settings window.
- Repeat step 1
- Notice that the Color schema dropdown is once again set to 'Custom', and that the Color dropdown and ColorChooser are again 'live' and not grayed out.
Once a user has selected a pre-defined color schema, the settings window should remember it and show it as selected every time the settings are opened.
Attachments (1)
Change History (18)
comment:1 follow-up: ↓ 2 Changed 17 months ago by siarzhuk
- Owner changed from jackburton to siarzhuk
- Status changed from new to assigned
comment:2 in reply to: ↑ 1 Changed 17 months ago by Disreali
Replying to siarzhuk:
Are you using non-English locale?
No. The system locale is en-US. I did not know that made a difference.
comment:3 Changed 14 months ago by Disreali
- Summary changed from [Terminal] remember color schema settings to [Terminal] remember color schema settings [easy]
Changed 14 months ago by luckypower
comment:4 Changed 14 months ago by luckypower
- Has a Patch set
comment:5 follow-up: ↓ 7 Changed 14 months ago by luckypower
- Keywords GSOC2012 added
comment:6 Changed 14 months ago by diver
Could be related to #7209.
comment:7 in reply to: ↑ 5 ; follow-up: ↓ 8 Changed 14 months ago by siarzhuk
comment:8 in reply to: ↑ 7 ; follow-up: ↓ 9 Changed 14 months ago by siarzhuk
Replying to siarzhuk:
GSOC2012
???
Ups. :-( All is OK. Thank for the submission, luckypower!
Sorry for the noise!
comment:9 in reply to: ↑ 8 Changed 14 months ago by luckypower
comment:10 follow-up: ↓ 11 Changed 14 months ago by bonefish
Any explanation for the patch? I haven't looked at the related code, but just looking at the patch I wonder why a == operator should not compare certain attributes. Intuitively I'd say that's the wrong place for a fix.
comment:11 in reply to: ↑ 10 ; follow-up: ↓ 12 Changed 14 months ago by siarzhuk
Replying to bonefish:
Any explanation for the patch? I haven't looked at the related code, but just looking at the patch I wonder why a == operator should not compare certain attributes. Intuitively I'd say that's the wrong place for a fix.
I suspect that both cursor colors of the Color object are not used at the moment. So if the Color objects really contain not-initialized trash here - it is not a wonder why user see the "Custom" scheme every time he tries to set the pre-defined scheme. So the patch can be related to the real source of problem and can be counted as valual for GSoC.
From the other side I have on my TODO list many tasks related to Terminal problems and restoring normal colors support is one of them I'm dreaming all this years when my MC goes to acid "green instead white" color scheme. ;-) Thats why I do not applied this.
comment:12 in reply to: ↑ 11 ; follow-up: ↓ 13 Changed 14 months ago by bonefish
Replying to siarzhuk:
I suspect that both cursor colors of the Color object are not used at the moment. So if the Color objects really contain not-initialized trash here
I would suspect something like that as well, but if that's the case, the better solution would be either to remove these attributes completely (not just in the == operator) or -- particularly if there's any intention to use them in the future -- initialize them properly (and keep the comparison in the == operator).
comment:13 in reply to: ↑ 12 ; follow-up: ↓ 14 Changed 14 months ago by siarzhuk
Replying to bonefish:
Replying to siarzhuk:
I suspect that both cursor colors of the Color object are not used at the moment. So if the Color objects really contain not-initialized trash here
I would suspect something like that as well, but if that's the case, the better solution would be either to remove these attributes completely (not just in the == operator) or -- particularly if there's any intention to use them in the future -- initialize them properly (and keep the comparison in the == operator).
You are right. Correct initialization of the object fileds is looking like more correct way to solve theproblem at the moment. ;-)
comment:14 in reply to: ↑ 13 Changed 14 months ago by luckypower
Replying to siarzhuk:
Replying to bonefish:
Replying to siarzhuk:
I suspect that both cursor colors of the Color object are not used at the moment. So if the Color objects really contain not-initialized trash here
I would suspect something like that as well, but if that's the case, the better solution would be either to remove these attributes completely (not just in the == operator) or -- particularly if there's any intention to use them in the future -- initialize them properly (and keep the comparison in the == operator).
You are right. Correct initialization of the object fileds is looking like more correct way to solve theproblem at the moment. ;-)
Thanks for correcting me. cursor_fore_color and cursor_back_color was not set when we change the schema. So i thought it must not be checked when we compare schema. But I will come up with better solution, as both of you suggested.
comment:15 follow-up: ↓ 16 Changed 6 months ago by kallisti5
- Resolution set to fixed
- Status changed from assigned to closed
solved in hrev44955
comment:16 in reply to: ↑ 15 Changed 4 months ago by siarzhuk
- Resolution fixed deleted
- Status changed from closed to reopened
comment:17 Changed 3 months ago by siarzhuk
- Resolution set to fixed
- Status changed from reopened to closed
Fixed in hrev45266.

Are you using non-English locale?