Terminal: Ensure changing color schema modifies cursor

* Really fixes #8256